# zFISHer

./: .gitignore  CITATION.cff  LICENSE  README.md  combine_scripts.py  combined_pipeline.txt  conda_setup.md  environment.yml  headlesstest_pipeline.py  headlesstest_session.py  main.py  pyproject.toml  requirements.txt  zfisher_environment.yml
.claude/: settings.local.json
examples/: README.md  zFISHer_Analysis_Report_example.xlsx
tests/: test_analysis.py  test_layer_removal_backup.py  test_native_add_id.py  test_puncta_identity.py  test_registration.py  test_segmentation.py  test_session_location.py  test_session_portability.py
zfisher/: __init__.py  cli.py  constants.py  version.py  zFISHer.code-workspace
zfisher/core/: analysis.py  generate_batch_template.py  io.py  log_config.py  pipeline.py  puncta.py  registration.py  report.py  segmentation.py  session.py
zfisher/ui/: constants.py  decorators.py  events.py  filename  popups.py  style.py  viewer.py  viewer_helpers.py
zfisher/ui/widgets/: _shared.py  alignment_consensus_widget.py  automated_preprocessing_widget.py  batch_process_widget.py  canvas_widget.py  capture_widget.py  colocalization_widget.py  dapi_segmentation_widget.py  distance_widget.py  export_visualization_widget.py  export_widget.py  file_selector_widget.py  home_widget.py  load_session_widget.py  mask_editor_widget.py  new_session_widget.py  nuclei_matching_widget.py  nuclei_segmentation_widget.py  puncta_editor_widget.py  puncta_picking_widget.py  puncta_widget.py  refilter_puncta_widget.py  registration_widget.py  scale_bar_widget.py  start_session_widget.py  welcome_overlay_widget.py
