[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zfisher"
version = "1.0.0"
description = "3D colocalization analysis for multiplexed sequential FISH, built on napari"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10,<3.11"
authors = [
    {name = "Seth Staller", email = "Seth.Staller@STJUDE.ORG"},
]
keywords = ["FISH", "colocalization", "napari", "microscopy", "3D", "segmentation", "registration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "napari[all]==0.6.6",
    "PySide6==6.8.1",
    "numpy==1.24.3",
    "scipy==1.15.3",
    "scikit-image==0.24.0",
    "pandas==2.3.3",
    "tifffile==2025.2.18",
    "magicgui==0.10.1",
    "SimpleITK==2.5.3",
    "cellpose==4.0.8",
    "nd2==0.11.2",
    "openpyxl==3.1.5",
    "markdown==3.10.2",
    "packaging==26.0",
    "qtpy==2.4.3",
    "Pillow==12.0.0",
]

[project.urls]
Homepage = "https://github.com/stjude/zFISHer"
Repository = "https://github.com/stjude/zFISHer"
Issues = "https://github.com/stjude/zFISHer/issues"

[project.scripts]
zfisher = "main:main"

[tool.setuptools.packages.find]
include = ["zfisher*"]

[tool.setuptools.package-data]
zfisher = ["resources/*.ico", "resources/*.png", "resources/icons/*.svg"]
